Sanitize input when changing locale to prevent XSS

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -136,7 +136,9 @@
 			function onChangeLocal(e) {
 				let val = e.options[e.selectedIndex].value;
 				console.log(val);
-				window.location.search = val;
+				if (val.includes('?lang=') && val.length == 8) {
+					window.location.search = val;
+				}
 			}
 		</script>
 	</footer>
